--- a/authService/config/.env
+++ b/authService/config/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://AuthService:1600uAj%401105@cluster0.kigms.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI = "mongodb://localhost:4444/test"
