--- a/authService/package.json
+++ b/authService/package.json
@@ -11,6 +11,7 @@
   "author": "Umar jere umar.jere@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
@@ -18,7 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongodb": "^4.2.1",
-    "mongoose": "^5.13.8"
+    "mongoose": "^6.0.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
